# personal-book-brain

./: .gitignore  .pre-commit-config.yaml  README.md  firebase.json  pyproject.toml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/: __init__.py  config.py  main.py
backend/src/application/services/: fetch_book_metadata_service.py  list_books_service.py  register_book_service.py  search_report_service.py
backend/src/domain/: exceptions.py
backend/src/domain/interfaces/: __init__.py  auth_service.py  book_indexer.py  book_repository.py  report_generator.py  search_engine.py
backend/src/domain/models/: __init__.py  book_master.py  search_report.py  user.py  user_library.py
backend/src/infrastructure/firebase/: __init__.py  auth_service.py  setup.py
backend/src/infrastructure/firestore/: __init__.py  book_master_repository.py  user_library_repository.py
backend/src/infrastructure/gemini/: __init__.py  report_generator.py  toc_generator.py
backend/src/infrastructure/vertex/: __init__.py  book_indexer.py  search_engine.py
backend/src/presentation/api/: books.py  deps.py  search.py
docs/: DEPLOYMENT.md  SETUP.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  firebase.ts  style.css  types.ts
frontend/src/components/: BookIngest.vue  BookList.vue  SearchReport.vue  TocList.vue
frontend/src/composables/: useApiClient.ts
